# cofd-pc-dx

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  deny.toml  flake.nix  input.css  rust-toolchain.toml
.cargo/: config.toml
assets/: tailwind.css
src/: hooks.rs  main.rs  router.rs
src/components/: attributes.rs  dot_rating.rs  info.rs  merits.rs  mod.rs  navbar.rs  skills.rs
src/views/: mod.rs  sheet.rs
