[package]
name = "cofd-pc"
version = "0.1.0"
authors = ["m00nwtchr <m00nwtchr@duck.com>"]
license = "MPL-2.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
cofd = { git = "https://github.com/m00nwtchr/cofd.git", branch = "systema" }
strum = "0.27"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1"

[features]
default = ["desktop"]
#server = ["dioxus/server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
